# SolScout_v1.1

./: .env  Makefile  docker-compose.yml
analytics/: CMakeLists.txt  vcpkg.json
analytics/src/: analytics_service.cpp  analytics_service.hpp  api_signals.cpp  api_signals.hpp  config.cpp  config.hpp  entry_exit.cpp  entry_exit.hpp  main.cpp  pg_store.cpp  pg_store.hpp  redis_bus.cpp  redis_bus.hpp  regime.cpp  regime.hpp  scoring.cpp  scoring.hpp  signals.cpp  signals.hpp  throttles.cpp  throttles.hpp  types.hpp
ingestor/: CMakeLists.txt  Dockerfile  vcpkg.json
ingestor/src/: backoff_manager.cpp  backoff_manager.hpp  config.cpp  config.hpp  db_manager.cpp  db_manager.hpp  dex_client.cpp  dex_client.hpp  jupiter_client.cpp  jupiter_client.hpp  main.cpp  ohlcv_aggregator.cpp  ohlcv_aggregator.hpp  pool_cache.cpp  pool_cache.hpp  rate_limiter.cpp  rate_limiter.hpp  redis_publisher.cpp  redis_publisher.hpp  service.cpp  service.hpp  types.hpp  util.cpp  util.hpp
notifier/: CMakeLists.txt  vcpkg.json
notifier/src/: audit_logger.cpp  audit_logger.hpp  config.cpp  config.hpp  deduplicator.cpp  deduplicator.hpp  formatter.hpp  main.cpp  notifier_service.cpp  notifier_service.hpp  redis_bus.cpp  redis_bus.hpp  throttler.cpp  throttler.hpp  types.cpp  types.hpp  util.cpp  util.hpp
portfolio/: .env  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
portfolio/src/: config.cpp  config.hpp  database_manager.cpp  database_manager.hpp  health.cpp  health.hpp  health_checker.cpp  health_checker.hpp  json_schemas.cpp  json_schemas.hpp  main.cpp  portfolio_service.cpp  portfolio_service.hpp  price_client.cpp  price_client.hpp  redis_bus.cpp  redis_bus.hpp  solana_client.cpp  solana_client.hpp  util.cpp  util.hpp
secrets/: owner_telegram_id  postgres_password  postgres_user  redis_password  tg_bot_token
soulscout/: .env  .gitignore  Makefile  README.md  docker-compose.yml
soulscout/ops/: healthcheck.dockerfile  init.sql  monitoring.yml  prometheus.yml  retention.sql
soulscout/ops/grafana/dashboards/: dashboard.yml  soulscout.json
tg_gateway/: CMakeLists.txt  Dockerfile  test_docker.sh  vcpkg.json  vcpkg.json.bak
tg_gateway/src/: auth.cpp  auth.hpp  config.cpp  config.hpp  health.cpp  health.hpp  json_schemas.cpp  json_schemas.hpp  main.cpp  main.cpp (completion)  parser.cpp  parser.hpp  poller.cpp  poller.hpp  rate_limiter.cpp  rate_limiter.hpp  redis_bus.cpp  redis_bus.hpp  telegram_client.cpp  telegram_client.hpp  util.cpp  util.hpp  webhook_server.cpp  webhook_server.hpp
